fix: add scroll to overflowing containers

--- a/src/styles/backlog.css
+++ b/src/styles/backlog.css
@@ -1,8 +1,10 @@
 .backlog {
   box-sizing: border-box;
-  padding: 10px 10px 20px;
+  max-height: var(--boardMaxHeight);
+  padding: 10px 0;
   background-color: var(--colorUIPrimary);
   border-radius: 10px;
+  overflow: hidden;
 }
 
 .backlog__title {
@@ -18,26 +20,34 @@
 }
 
 .backlog__search-form {
-  margin-bottom: 20px;
+  margin: 0 10px 20px;
 }
 
 .backlog__tasks-container {
+  box-sizing: border-box;
   margin: 0;
   display: flex;
   flex-direction: column;
   row-gap: 10px;
-  padding: 0;
+  max-height: calc(100% - 122px);
+  padding: 5px 10px 10px 10px;
   list-style-type: none;
   font-size: 18px;
   font-weight: 400;
   line-height: 1.2;
   text-align: center;
   color: var(--colorTextPrimary);
+  overflow-y: scroll;
+  scrollbar-width: thin;
 }
 
 @media screen and (max-width: 1280px){
   .backlog__title {
     font-size: 20px;
+  }
+
+  .backlog__tasks-container {
+    max-height: calc(100% - 100px);
   }
 }
 
