--- a/src/styles/calendar-column.css
+++ b/src/styles/calendar-column.css
@@ -15,6 +15,7 @@
   padding: 10px;
   background-color: var(--colorUICalendar);
   border-radius: 5px;
+  z-index: 5;
 }
 
 .calendar-column_current-day .calendar-column__date {
